<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YunMingDemo</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_first">云茗茶叶</string>
    <string name="user">手机号/用户名</string>
    <string name="password">密码</string>
    <string name="enroll">注册</string>
    <string name="entry">登录</string>
    <string name="title">云茗茶叶</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_home_tab">HomeTab</string>
    <string name="title_activity_mall_tab">MallTab</string>
    <string name="title_activity_my_tab">MyTab</string>
    <string name="my_grade"> 等級 ： </string>
    <string name="my_integral"> 积分 ： </string>
    <string name="my_orderlist"> 订单记录 </string>
    <string name="my_favorite"> 收藏夹 </string>
    <string name="title_activity_home_image_fragment">HomeImageFragment</string>
    <string name="title_activity_commodity">Commodity</string>
    <string name="btn_sort">排序</string>
    <string name="btn_screening">筛选</string>
    <string name="back">返回</string>
    <string name="title_activity_productdetail">Productdetail</string>
    <string name="tv_Evaluation">评价详情</string>
    <string name="commodity_information">商品信息</string>
    <string name="productPacking">包装方式</string>
    <string name="title_activity_product_detail_images">ProductDetailImages</string>
    <string name="title_activity_product_info">ProductInfo</string>
    <string name="origin">产地</string>
    <string name="storage">储存方式</string>
    <string name="ShelfLife">保质期</string>
    <string name="makingProcess">制作工艺</string>
    <string name="textture">口感</string>
    <string name="title_activity_product_e">ProductE</string>
    <string name="btn_publish">发表</string>
    <string name="title_activity_packing_choice">PackingChoice</string>
    <string name="btn_choice_packing">选择包装</string>
    <string name="weight">重量</string>
    <string name="format">规格</string>
    <string name="btn_add">加入购物车</string>
    <string name="has_choice">已选</string>
    <string name="packing">包装</string>
    <string name="price">价格</string>
    <string name="title_activity_shopping">Shopping</string>
    <string name="buy">购买</string>
    <string name="editor">编辑</string>
    <string name="complete">完成</string>
    <string name="title_activity_confirm_order">ConfirmOrder</string>
    <string name="specify_service">指定客服</string>
    <string name="submit">提交</string>
    <string name="title_activity_choice_service">ChoiceService</string>
    <string name="choiceServiceDesc">选择为您服务的客服专员</string>
    <string name="choiceService">选择客服</string>
    <string name="title_activity_employee_detail">EmployeeDetail</string>
    <string name="title_activity_contact_the_store">ContactTheStore</string>
    <string name="shopping_car">购物车</string>
    <string name="title_activity_all_order_item">AllOrderItem</string>
    <string name="title_activity_favorite">Favorite</string>
    <string name="title_activity_my_edit">MyEdit</string>
    <string name="edit_save">保存</string>
    <string name="user_name">用户名</string>
    <string name="rel_name">姓名</string>
    <string name="job">职务</string>
    <string name="Password_modification">密码修改</string>
    <string name="title_activity_new_product">NewProduct</string>
    <string name="title_activity_tea_info">TeaInfo</string>
    <string name="title_activity_tea_info_detail">TeaInfoDetail</string>
    <string name="tea_info">发表评论</string>
    <string name="title_activity_news_evaluation">NewsEvaluation</string>
    <string name="title_activity_sellers">Sellers</string>
    <string name="title_activity_map">Map</string>
    <string name="action_search">搜索</string>
    <string name="title_activity_search_result">SearchResult</string>

</resources>
