<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreenActivity" >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <TextView
            android:id="@+id/tv_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_title"
        android:layout_margin="30dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/user"
        android:padding="15dp" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_user"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/password"
        android:padding="15dp" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_pass"
        android:layout_marginTop="15dp" >

        <Button
            android:id="@+id/btn_enroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/gray_btn_normal"
            android:text="@string/enroll"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_weight="2"
            android:background="@drawable/green_btn_normal"
            android:text="@string/entry"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_margin="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/forget_pressed" />

</RelativeLayout>