<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmOrder" >
	
     <RelativeLayout
        android:id="@+id/rl_co_one"
        android:background="@drawable/title_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

       <TextView 
	        android:id="@+id/tv_co_back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/back_normal"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="10dp"
	        android:gravity="center"
	        android:text="@string/back"
	        />
       </RelativeLayout>
       
    <TextView
        android:id="@+id/tv_co_info"
        android:layout_below="@id/rl_co_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="22sp"
        android:text="@string/commodity_information" />
    
    <ListView 
        android:id="@+id/lv_co"
        android:layout_below="@id/tv_co_info"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_bg">
        
    </ListView>
    
    <RelativeLayout 
        android:id="@+id/rl_co_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_co_three"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_bg">
        
        <TextView 
	        android:id="@+id/tv_co_specify_service"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:gravity="center"
	        android:textSize="20sp"
	        android:text="@string/specify_service"
	        />
        
        
        <TextView 
	        android:id="@+id/tv_co_service_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:gravity="center"
	        android:textSize="20sp"/>
        
    </RelativeLayout>
    
        <RelativeLayout
        android:id="@+id/rl_co_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#787070" >

        <TextView
            android:id="@+id/tv_co_original_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tv_co_member_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_co_original_cost"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_co_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/red_btn_normal"
            android:text="@string/submit" />
    </RelativeLayout>

</RelativeLayout>
