<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#EFEFE7"
    tools:context=".MyTab" >

    <ImageView
        android:id="@+id/img_my_picture"
         android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/no_picture" />
    
    <TextView 
        android:id="@+id/tv_my_name"
        android:layout_toRightOf="@id/img_my_picture"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@null"/>
    <TextView 
        android:id="@+id/tv_my_grade"
        android:layout_toRightOf="@id/img_my_picture"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="20sp"
        android:layout_below="@id/tv_my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_grade"/>
    <TextView 
        android:id="@+id/tv_my_grade_number"
        android:textSize="20sp"
        android:layout_below="@id/tv_my_name"
        android:layout_toRightOf="@id/tv_my_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@null"/>
    <TextView 
        android:id="@+id/tv_my_integral"
        android:layout_toRightOf="@id/img_my_picture"
        android:textSize="20sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@id/tv_my_grade_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_integral"
        />
    <TextView 
        android:id="@+id/tv_my_integral_number"
        android:textSize="20sp"
        android:layout_below="@id/tv_my_grade_number"
        android:layout_toRightOf="@id/tv_my_integral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@null"/>

    <ImageView
        android:id="@+id/mine_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tv_my_grade_number"
        android:layout_marginRight="16dp"
        android:contentDescription="@null"
        android:src="@drawable/mine_edit_normal" />
    
    <RelativeLayout
        android:id="@+id/img_info"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/img_my_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:background="@drawable/aaa" >
        
    <ImageView 
        android:id="@+id/img_orderlist"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mine_orderlist"
        android:contentDescription="@null"/>
    
    <TextView 
        android:id="@+id/tv_orderlist"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:layout_toRightOf="@id/img_orderlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:text="@string/my_orderlist"/>
    
    <TextView 
        android:id="@+id/tv_oneline"
        android:layout_below="@id/tv_orderlist"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:background="#EFEFE7"
        />
    
    <ImageView 
        android:id="@+id/img_favorite"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@id/tv_oneline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mine_favorite"
        android:contentDescription="@null"/>
    
    <TextView 
        android:id="@+id/tv_favorite"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:layout_below="@id/tv_oneline"
        android:layout_toRightOf="@id/img_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:text="@string/my_favorite"/>
    
     </RelativeLayout>

</RelativeLayout>