<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PackingChoice" >

    <RelativeLayout
        android:id="@+id/rl_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/back_normal"
            android:text="@string/back" />

        <TextView
            android:id="@+id/tv_theme_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_pack_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_up"
        android:background="#E7EBDE" >

        <Gallery
            android:id="@+id/gl_packing_choice_detail"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:spacing="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_pack_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_pack_one"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/tv_packing_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:text="@string/btn_choice_packing"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Gallery
            android:id="@+id/gl_packing_choice"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_toRightOf="@id/tv_packing_choice"
            android:spacing="40dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_pack_two"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="#EFEFE7" />

    <RelativeLayout
        android:id="@+id/rl_pack_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_line"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/weight"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_line_one"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_pack_three"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="#EFEFE7" />

    <RelativeLayout
        android:id="@+id/rl_pack_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_line_one"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/format"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_line_two"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_pack_four"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="#EFEFE7" />

    <RelativeLayout
        android:id="@+id/rl_pack_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_line_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/packing"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_packs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_line_three"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_pack_five"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="#EFEFE7" />

    <RelativeLayout
        android:id="@+id/rl_pack_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_line_three"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/price"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_line_four"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_pack_six"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="#EFEFE7" />

    <RelativeLayout
        android:id="@+id/rl_pack_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gray_bg" >

        <ImageView
            android:id="@+id/img_pack_collects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/collect_btn_normal" />

        <ImageView
            android:id="@+id/img_pack_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/img_pack_collects"
            android:contentDescription="@null"
            android:gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/comment_btn_normal" />

        <ImageView
            android:id="@+id/img_pack_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/img_pack_comment"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/recommend_btn_normal" />

        <Button
            android:id="@+id/btn_shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/red_btn_normal"
            android:gravity="center"
            android:text="@string/btn_add"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>